2008-03-11  John W. Eaton  <jwe@octave.org>

	* io/csread.m, io/csvwrite.m, io/dlmwrite.m: Style fixes.

2008-03-12  David Bateman  <dbateman@free.fr>

	* io/dlmwrite.m, io/csvread.m, io/csvwrite.m: Files ported from
	octave-forge.
	* io/Makefile.in (SOURCES): Add them here.

2008-03-07  John W. Eaton  <jwe@octave.org>

	* plot/contourf.m: Set axes layer property to "top".

	* plot/__go_draw_axes__.m: Handle tickdir property.

2008-03-06  John W. Eaton  <jwe@octave.org>

	* plot/hist.m: Avoid temporaries.
	Allow matrix arguments when number of bins > 30.
	From Robert S. Mahurin <rob@utk.edu>.

	* plot/ChangeLog: Handle axes linewidth property.

	* plot/__go_draw_axes__.m: Adjust markersize by a factor of 1/6.

	* general/interpn.m: New test.

2008-03-05  Ben Abbott  <bpabbott@mac.com>

	* polynomial/roots.m: Catch Infs and/or NaNs.

2008-03-05  Sebastien Loisel  <loisel@temple.edu>

	* polynomial/roots.m: Apply a scaling factor to the removal of the
	leading zeros.

2008-03-04  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Fix oops in applying last change.

2008-03-04  Bill Denney  <bill@denney.ws>

	* plot/allchild.m, plot/findall.m: New functions.
	* plot/Makefile.in (SOURCES): Add them to the list.

	* geometry/rectint.m: New function.
	* geometry/Makefile.in (SOURCES): Add it to the list.

2008-03-04  Michael Goffioul <michael.goffioul@gmail.com>

	* pkg/pkg.m (pkg:configure_make): Make it work with recent changes in
	isspace handling with cell arrays of strings.

2008-03-04  Ben Abbott  <bpabbott@mac.com>

	* polynomial/polyfit.m: Modified tests to respect a relative tolerance.

	* plot/print.m: Accept a figure handle as an optional input.
 
2008-02-29  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Handle gif and jpg devices.

2008-02-28  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m (get_old_gnuplot_color): New subfunction.
	Use it to replace repeated if/elseif blocks.

2008-02-28  Kai Habel  <kai.habel@gmx.de>
