@@ -8,7 +8,7 @@
 
 	* DLD-FUNCTIONS/dlmread.cc: Style fixes.
 
-2008-03-12  David Bateman  <dbateman@free.fr>
+2008-03-11  David Bateman  <dbateman@free.fr>
 
 	* DLD-FUNCTIONS/dlmread.cc: Function ported from octave forge. Add
 	spreadsheet style ranges.
