@@ -1,8 +1,14 @@
+2008-03-11  Kai Habel  <kai.habel@gmx.de>
+
+        * plot/__go_draw_axes__.m: Plot surfaces in front of axes.
+        Allow plotting of uniform colored mesh plots with and
+        w/o hidden line removal.
+
 2008-03-11  John W. Eaton  <jwe@octave.org>
 
 	* io/csread.m, io/csvwrite.m, io/dlmwrite.m: Style fixes.
 
-2008-03-12  David Bateman  <dbateman@free.fr>
+2008-03-11  David Bateman  <dbateman@free.fr>
 
 	* io/dlmwrite.m, io/csvread.m, io/csvwrite.m: Files ported from
 	octave-forge.
